update martian